--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,3 @@
-PORT=8000
-NODE_ENV=PRODUCTION
-DB_URL=mongodb://localhost:27017/petpro_connect
+PORT=5000
+NODE_ENV=DEVELOPMENT
+DB_URL=mongodb://localhost:27017/petpro_connect_new1
